Fix lighthouse report

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Red!Tech is an organization founded by students of University of Belgrade, School of Electrical Engineering with a goal to educate fellow students how to apply knowledge gained at the university to solve real world problems."
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <title>Red!Tech, Computer Science explained</title>
   </head>
